Fixed Toggel Menu Items Alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ h1 {
 
 .nav-bar.active {
   position: absolute;
-  padding: 1rem;
+  padding: 0 1rem;
   top: 4rem;
   left: 0;
   display: flex;
@@ -77,18 +77,21 @@ h1 {
   background-color: var(--dk-grey1);
 
   & .menu li {
-    line-height: 2.5rem;
+    line-height: 2rem;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  & .dropdown {
+    justify-items: end;
+    padding-left: 0;
   }
 
   & svg {
     display: none;
   }
 }
-
-.header-container a {
-  text-align: right;
-}
-
 .toggle-btn {
   background-color: transparent;
   border: none;
@@ -110,6 +113,7 @@ h1 {
   margin: 0;
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
 
   & svg {
     width: 18px;
@@ -122,6 +126,7 @@ h1 {
   text-decoration: none;
   color: var(--white1);
   gap: 0.5rem;
+  justify-content: flex-end;
 }
 
 .menu li {
